# shrinky

./: .gitignore  .imgbotconfig  CHANGELOG.md  CODEOWNERS  README.md  SECURITY.MD  justfile  pyproject.toml  test_shrinky.py
.github/workflows/: bandit.yml  mypy.yml  pylint.yml  pytest.yml
shrinky/: __init__.py  __main__.py
tests/: test_shrinky.py
