[tool.poetry]
name = "shrinky"
version = "0.0.6"
description = "Shrinks images in the way I want"
authors = ["James Hogkinson <james@terminaloutcomes.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
loguru = ">=0.6,<0.8"
Pillow = ">=9.0.1,<11.0.0"

[tool.poetry.dev-dependencies]
pylint = "^3.0.1"
pytest = "^7.2.0"
mypy = "^1.0"
black = "^24.1.0"
types-Pillow = "^10.0.0"
bandit = "^1.7.4"
coverage = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[project.scripts]
"shrinky" = 'shrinky.__main__:cli'
[tool.poetry.scripts]
"shrinky" = 'shrinky.__main__:cli'

[tool.pylint.MASTER]
max-line-length=200
disable="W0511"
