
[project]
name = "shrinky"
version = "0.0.8"
description = "Shrinks images in the way I want"
authors = [{ name = "James Hogkinson", email = "james@terminaloutcomes.com" }]
license = { text = "MIT" }
readme = "README.md"

requires-python = "<4.0,>=3.12"
dependencies = [
    "click>=8.2.1",
    "loguru>=0.7.3",
    "Pillow>=11.2.1",
    "pillow-avif-plugin>=1.5.2",
    "pillow-heif>=1.0.0",
]


[project.scripts]
"shrinky" = "shrinky.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.15.0",
    "types-Pillow>=10.2.0",
    "bandit>=1.7.4",
    "coverage>=7.8.0",
    "ruff>=0.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.MASTER]
max-line-length = 200
disable = "W0511"
